Fix Internet Explorer CSS bugs:
* Table rows misaligned
* Date picker moves on longer months
* Stange wrapping bug on IE9

--- a/app/assets/stylesheets/base/_tables.css.scss
+++ b/app/assets/stylesheets/base/_tables.css.scss
@@ -179,7 +179,8 @@ div.table-wrapper {
       @include border-radius(0px 4px 0 0);
       @include box-sizing(border-box);
       margin-left: $table-width-mobile - 1;
-      overflow: auto;
+      overflow-y: auto;
+      overflow-x: hidden;
 
       &::-webkit-scrollbar {
         background-color: $bg-color;
@@ -312,7 +313,6 @@ div.table-wrapper {
           &.voted, &:nth-child(even).voted {
             background: darken($success, 25%);
             @include box-shadow(inset 0 0 10px darken($success, 30%));
-            @include box-sizing(border-box);
             color: #fff;
             position: relative;
             text-align: center;
